--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
+# Virtual environments
 venv/
+env/
+.venv/
+
+# Python cache
+__pycache__/
+*.pyc
+*.pyo
+
+# IDE files
+.vscode/
+.idea/
+
+# OS files
+.DS_Store
+Thumbs.db
