--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@ __pycache__/
 # OS files
 .DS_Store
 Thumbs.db
+
+# Large CSV datasets (exclude these - not needed for deployment)
+data/raw/
+data/cleaned/*.csv
+*.csv
