gitignore updated to not push large results files

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,10 @@ __pycache__/
 .DS_Store
 Thumbs.db
 
-# Large CSV datasets (exclude these - not needed for deployment)
-data/raw/
+# Do not track large data files or generated results.
+# The repository should only contain code and small summary files.
+data/raw/*.json
 data/cleaned/*.csv
-*.csv
+results/**/*.json
+results/**/*.csv
+results/**/*.png
